# raspberry-pose-monitor

./: README.md  camera.py  main.py  pose_classification.ipynb  pose_estimation.py  pose_labels.txt  pyproject.toml  requirements.txt  setup.sh  sitting_pose_classifier.tflite
