[project]
name = "raspberry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "numpy<2.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "picamera2>=0.3.27",
    "tflite-runtime>=2.14.0",
]
